# python_DS_application

./: pyproject.toml
.github/workflows/: test.yaml
